# reference_extractor

./: README.md  easy_script.py  not_gost_easy_script.py  not_gost_natasha_script.py  pyproject.toml  script.py
